--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Rishu2000/seeme/issues"
   },
-  "homepage": "https://github.com/Rishu2000/seeme#readme"
+  "homepage": "https://github.com/Rishu2000/seeme#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.9"
+  }
 }
