--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "socket.io": "^4.1.2"
   }
 }
