--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "homepage": "https://github.com/Rishu2000/seeme#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.9",
-    "socket.io": "^4.1.2"
+    "react-copy-to-clipboard": "^5.0.3",
+    "simple-peer": "^9.11.0",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2"
   }
 }
